--- a/CoreUI/src/assets/css/scheduler.css
+++ b/CoreUI/src/assets/css/scheduler.css
@@ -181,7 +181,9 @@
         box-shadow: inset 0 0 6px rgba(0,0,0,.3);
         background-color: #555;
     }
-
+    .activity_tabs_popup .sch_white_bg {
+        padding: 10px 4px;
+    }
     .activity_tabs_popup .smallScheduler {
       min-height: 532px;
       max-height: 532px;
